--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   geocoding: ^2.0.4
   flutter_map: ^4.0.0
   latlong2: ^0.8.0
+  google_maps_flutter: ^2.6.1
+  google_maps_flutter_web: ^0.5.7
 
 
   # The following adds the Cupertino Icons font to your application.
