fixed first screen, launcer iconsauto generated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  image_path: "C:\\Users\\User\\Documents\\vscode\\help\\jawla\\images\\Component 2 (1).png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
